spacing issue fixed

--- a/src/assets/admin/template/meetings.scss
+++ b/src/assets/admin/template/meetings.scss
@@ -269,6 +269,7 @@
                 border-top: 0.5px $border-type $surface-border;
                 padding-top: 24px;
                 width: 100%;
+                margin-top: auto;
                 a{
                     border-radius: $border-radius-medium;
                     border: $border-reguler $border-type $surface-border;
